[gd_scene load_steps=42 format=3 uid="uid://b8t2t6x7fljlt"]

[ext_resource type="Script" uid="uid://c824sktqq2prk" path="res://platformer/tcsn/knight.gd" id="1_rnl61"]
[ext_resource type="Texture2D" uid="uid://d0rx8r7mn7jav" path="res://sprites/IDLE.png" id="2_7ysk3"]
[ext_resource type="Texture2D" uid="uid://cm2eu6gog2e3k" path="res://sprites/JUMP.png" id="3_q7q7a"]
[ext_resource type="Texture2D" uid="uid://cg1u8araw6a4u" path="res://sprites/RUN.png" id="4_8tov7"]
[ext_resource type="Texture2D" uid="uid://ck28fvkgparcb" path="res://sprites/DEATH.png" id="4_rnl61"]
[ext_resource type="Script" uid="uid://cot32yq2u8voa" path="res://platformer/tcsn/animator_k.gd" id="6_rnl61"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pxst5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hdgqd"]
atlas = ExtResource("2_7ysk3")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbfmn"]
atlas = ExtResource("2_7ysk3")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwm78"]
atlas = ExtResource("2_7ysk3")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q450"]
atlas = ExtResource("2_7ysk3")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_e31jy"]
atlas = ExtResource("2_7ysk3")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_av3ri"]
atlas = ExtResource("2_7ysk3")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvj0m"]
atlas = ExtResource("2_7ysk3")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhrue"]
atlas = ExtResource("3_q7q7a")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cripv"]
atlas = ExtResource("3_q7q7a")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_npq2x"]
atlas = ExtResource("3_q7q7a")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3j5k"]
atlas = ExtResource("3_q7q7a")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgcda"]
atlas = ExtResource("3_q7q7a")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ysk3"]
atlas = ExtResource("4_rnl61")
region = Rect2(1056, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7q7a"]
atlas = ExtResource("4_rnl61")
region = Rect2(960, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tov7"]
atlas = ExtResource("4_rnl61")
region = Rect2(864, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj1jp"]
atlas = ExtResource("4_rnl61")
region = Rect2(768, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7idd"]
atlas = ExtResource("4_rnl61")
region = Rect2(672, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxst5"]
atlas = ExtResource("4_rnl61")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve0tw"]
atlas = ExtResource("4_rnl61")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1630n"]
atlas = ExtResource("4_rnl61")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsquh"]
atlas = ExtResource("4_rnl61")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_au45o"]
atlas = ExtResource("4_rnl61")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh00l"]
atlas = ExtResource("4_rnl61")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsdwo"]
atlas = ExtResource("4_rnl61")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_alhbc"]
atlas = ExtResource("4_8tov7")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg04u"]
atlas = ExtResource("4_8tov7")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1y78"]
atlas = ExtResource("4_8tov7")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffwj5"]
atlas = ExtResource("4_8tov7")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgal2"]
atlas = ExtResource("4_8tov7")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjt3l"]
atlas = ExtResource("4_8tov7")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_koely"]
atlas = ExtResource("4_8tov7")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc8tk"]
atlas = ExtResource("4_8tov7")
region = Rect2(672, 0, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_ve0tw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdgqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbfmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwm78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q450")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e31jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av3ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvj0m")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhrue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cripv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npq2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3j5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgcda")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ysk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7q7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tov7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj1jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7idd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxst5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve0tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1630n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsquh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au45o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh00l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsdwo")
}],
"loop": false,
"name": &"live",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_alhbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg04u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1y78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffwj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgal2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjt3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koely")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc8tk")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1630n"]
size = Vector2(14, 25)

[node name="knight" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_rnl61")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_pxst5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(0.854167, 0.869048)
sprite_frames = SubResource("SpriteFrames_ve0tw")
animation = &"live"
autoplay = "idle"
frame = 11
frame_progress = 1.0

[node name="Animator_k" type="Node2D" parent="." node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("6_rnl61")
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="InventorySlot" type="Marker2D" parent="."]
position = Vector2(0, -38)

[node name="collect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="collect"]
position = Vector2(17, -0.5)
shape = SubResource("RectangleShape2D_1630n")

[connection signal="body_entered" from="collect" to="." method="_on_collect_body_entered"]
